feat: Address warnings and additional commenting